# container-desktop

./: .browserslistrc  .code-workspace  .editorconfig  .env  .env.development  .env.production  .eslintignore  .eslintrc.cjs  .flake8  .gitignore  .isort.cfg  .markdownlint.json  .prettierrc  BUILDING.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  HISTORY.md  LICENSE  LIMA.md  Makefile  README.md  TODO.md  USAGE.md  VERSION  biome.json  electron-builder-config.cjs  eleventy.config.mjs  entitlements.mac.inherit.plist  entitlements.mac.plist  index.html  package.json  postcss.config.cjs  pyproject.toml  skills-lock.json  tasks.py  tsconfig.json  tsconfig.node.json  vite.config.common.mjs  vite.config.main.mjs  (+6 more)
.claude/: cclsp.json  settings.json
.claude/hooks/: code-lint.sh  subagent-lint.sh  verify-clean.sh
.claude/skills/: code-reviewer  domain-modeling  fp-ts-pragmatic  refactor
.codex/: config.toml
.codex/rules/: default.rules
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CDPipeline.Electron.yml  CDPipeline.Tauri.yml  CDPipeline.Wails.yml  CDPipeline.yml  CIPipeline.yml  pages.yml
api/: README.md  package-lock.json  package.json
api/src/: server.js
api/tools/: common.sh  provision.podman.sh
app/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: Api.clients.ts  Api.ts  App.i18n.ts  App.model.ts  App.store.ts  App.tsx  Domain.ts  Hooks.ts  Native.ts  Notification.tsx  Types.ts  index.css  index.tsx  react-app-env.d.ts
docs/: CNAME  PRIVACY.txt  README.md  VERSION  VERSION-Windows_NT  development.md  idle-efficiency-plan.md  index.html  mcp-server-support-plan.md  privacy-policy.html  testing.md  todo.md  usage.md
docs/architecture/: ai-subsystem.md  backend.md  connection-startup.md  engine-matrix.md  frontend.md  notes.md  overview.md  platform-ports.md  provisioning.md  system-tray.md
docs/css/: common.css  dark-theme.css  light-theme.css  responsive.css
docs/fonts/: Montserrat.css
public/: manifest.json
shell/: entitlements.mac.inherit.plist  package-lock.json  package.json
shell/icons/: appIcon.icns
shell/public/: ipc.js  main.js  preload.js  rpc.js  worker.js
shell/scripts/: makecert.sh  notarize.js
src/: Environment.ts  global.d.ts  i18n.test.ts  i18n.ts  typings.d.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  host.rs  keychain.rs  lib.rs  main.rs  process.rs  provider_transport.rs  proxy.rs  shell.rs  spawn_hidden.rs  ssh_config.rs  tray.rs
src-wails/: .editorconfig  .golangci.yml  bridge_listen_unix.go  bridge_listen_windows.go  bridge_service.go  bridge_service_test.go  data_plane_live_test.go  events.go  exec_service.go  fs_service.go  go.mod  go.sum  keychain_service.go  keychain_service_test.go  main.go  platform_service.go  process_kill_unix.go  process_kill_windows.go  process_service.go  process_service_test.go  proxy_dial_unix.go  proxy_dial_windows.go  proxy_service.go  proxy_stream_test.go  relaunch.go  relaunch_unix.go  relaunch_windows.go  shell_open.go  shell_service.go  spawn_hidden_other.go  spawn_hidden_windows.go  ssh_config.go  ssh_config_test.go  terminal_darwin.go  terminal_linux.go  terminal_windows.go  tray_service.go  window_state.go  window_state_test.go  workspace_service.go  (+1 more)
src/__tests__/: demoSanitize.test.ts  demoScenario.test.ts  normalizerIntegration.test.ts  release-matrix.test.ts  screenshotsManifest.test.ts  tauri-build.test.ts  tauri-native-bundles.test.ts  tauri-portable.test.ts  tauri-win-store.test.ts  website-downloads.test.ts
src/api/: .gitignore  .prettierrc  package-lock.json  package.json
src/app/: .gitignore  electron-builder.yml  package-lock.json  package.json  tsconfig.json
src/container-app/: index.ts
src/container-client/: Api.clients.test.ts  Api.clients.ts  Application.initInstance.test.ts  Application.registries.test.ts  Application.registryTrust.test.ts  Application.search.test.ts  Application.security.test.ts  Application.test.ts  Application.ts  api.ts  commandProxyProtocol.ts  config.ts  connection-display.test.ts  connection-display.ts  connection.test.ts  connection.ts  constants.ts  detector.test.ts  detector.ts  index.ts  logs.ts  notifier.ts  proxy-route.ts  proxy.test.ts  proxy.ts  remote-env.test.ts  remote-env.ts  resourceDomains.test.ts  resourceDomains.ts  resourceSyncProtocol.ts  runner.ts  services.ssh.test.ts  services.ts  shared.ts  ssh-args.ts  types.ts  wsl-args.test.ts  wsl-args.ts
src/container-config/: index.ts
src/container-provisioning/: decisionTable.test.ts  decisionTable.ts  types.ts  (+19 more)
support/: aliases.mjs  app-metadata.cjs  appimage-libs.cjs  audit-shared.mjs  build-matrix.cjs  build-podman.sh  build-relay.cmd  build-relay.sh  cdp.mjs  cdpEndpoint.mjs  ci_artifacts.py  cli.sh  create-icons.py  demoReplay.mjs  demoSanitize.mjs  demoScenario.json  demoScenarios.mjs  dev-smoke.mjs  generate-engine-icons.mjs  notarize.js  openssl.conf  patch-node-modules.mjs  podman  popper-core-shim.mjs  prod.mjs  provision-deps.sh  release-artifacts.cjs  requirements.txt  screenshotActions.mjs  screenshots.manifest.mjs  screenshots.mjs  swarm-sandbox.sh  tauri-build.cjs  tauri-native-bundles.cjs  tauri-portable.cjs  tauri-win-store.cjs  test-connection.mjs  test-streaming.mjs  tray-cdp.mjs  update-electron-vendors.mjs  (+5 more)
support/podman-desktop-companion-relay/: Cargo.toml
support/podman-desktop-companion-relay/src/: main.rs
support/unix-socket-relay/: Cargo.toml
support/unix-socket-relay/src/: main.rs
support/unix-socket-relay/src/relay/: main.rs
support/unix-socket-relay/src/server/: main.rs
support/unix-socket-relay/test/samples/: ping.http.txt
tests/: test_ci_artifacts.py  test_release_bundle_targets.py  test_versioning.py
webdriver/: wdio.conf.js
website/: VERSION  VERSION-Windows_NT  index.html  privacy-policy.html  robots.txt  sitemap.xml
website-src/: VERSION-Windows_NT.njk  VERSION.njk  index.njk  privacy-policy.md  robots.njk  sitemap.njk
(+1556 files in other folders)
