[package]
name = "podman-desktop-companion"
version = "5.2.0-rc.3"
description = "Container desktop helper app"
authors = ["Ionut Stoica <stoica.ionut@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "podman_desktop_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
strip = true
