[package]
name = "podman-desktop-companion-relay"
version = "1.0.1"
edition = "2021"
resolver = "2"

[build]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
axum = "0.7.5"

hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.7", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

