[package]
name = "unix-socket-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "relay"
path = "src/relay/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
